--- a/front-end/src/components/AllWeatherRollup/AllWeatherRollup.css
+++ b/front-end/src/components/AllWeatherRollup/AllWeatherRollup.css
@@ -1,25 +1,28 @@
-.weather-container {
+.weather-chart-container {
+    margin: 20px;
+    width: 100%; /* Set the width as a percentage of the parent container */
+    max-width: 80vw; /* Optional: set a max width */
+    margin-left: auto; /* Center align the container */
+    margin-right: auto; /* Center align the container */
+  }
+  
+  .weather-icons {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
+    justify-content: space-between;
+    margin-top: 20px;
+    font-size: 20px;
+    padding-left: 1.6em;
+    padding-right: 1.4em;
   }
   
-  .weather-card {
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    width: 200px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  .weather-icon-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 14px;
   }
   
-  .weather-card h3 {
-    margin: 0 0 10px 0;
-    font-size: 1.2em;
-  }
-  
-  .weather-card p {
-    margin: 5px 0;
+  .weather-icon-item span {
+    margin-bottom: 5px;
   }
   
