--- a/front-end/src/components/PresentWeather/PresentWeather.css
+++ b/front-end/src/components/PresentWeather/PresentWeather.css
@@ -56,3 +56,16 @@
     margin-top: 20px;
   }
   
+  .loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100px; /* Adjust as needed */
+  }
+  
+  .loading-text {
+    margin-top: 10px;
+    font-size: 16px;
+  }
+  
