--- a/front-end/src/components/TemperatureTrends/TemperatureTrends.css
+++ b/front-end/src/components/TemperatureTrends/TemperatureTrends.css
@@ -1,45 +1,30 @@
-/* src/components/TemperatureTrends/TemperatureTrends.css */
 .temperature-trend-container {
-    display: flex;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 1rem;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 1rem 0;
-  }
-  
-  .temperature-chart {
-    flex: 1;
-    height: 200px;
-    width: 400px;
-  }
-  
-  .temperature-info {
-    padding: 1rem;
-    flex: 1;
-  }
-  
-  .temperature-info h6 {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .temperature-info div {
-    font-size: 0.9rem;
-  }
-  
-  .last-updated {
-    display: flex;
-    align-items: center;
-    color: #888;
-  }
-  
-  .last-updated span {
-    margin-right: 0.5rem;
-  }
-  
-  hr {
-    margin: 1rem 0;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 1rem 0;
+}
+
+.temperature-chart {
+  width: 80%;
+}
+
+.temperature-summary {
+  margin-top: 1rem;
+}
+
+.weather-conditions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.weather-icon {
+  text-align: center;
+  margin: 0 10px;
+}
