--- a/front-end/src/components/PresentWeather/PresentWeather.css
+++ b/front-end/src/components/PresentWeather/PresentWeather.css
@@ -61,7 +61,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100px; /* Adjust as needed */
+    height: 100px; 
   }
   
   .loading-text {
