--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -12,7 +12,6 @@ html, body {
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column; /* Stack navbar and footer vertically */
-  height: 100vh; /* Full height of the viewport */
   padding: 20px;
 }
 
@@ -32,16 +31,20 @@ html, body {
 }
 
 .side-container {
-  width: 15%; /* Adjusted width to 20% */
+  width: 20%;
   background: linear-gradient(195deg, rgb(66, 66, 74), rgb(25, 25, 25));
-  border: 2px solid #181414;
   border-radius: 10px;
-  height: 95vh; /* Full height minus some padding */
+  height: 95vh; 
   padding: 20px;
   box-sizing: border-box;
   position: sticky; 
   top: 20px;
   z-index: 100; 
+  overflow: scroll;
+}
+
+.side-container::-webkit-scrollbar {
+  display: none; /* Hide scrollbar */
 }
 
 .side-container-header {
@@ -58,7 +61,9 @@ html, body {
 
 .side-container-menu li {
   margin: 10px 0;
-  padding: 10px;
+  padding: 10px 7px;
+  /* padding-left: 5px;
+  padding-right: 5px; */
   background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
   border-radius: 5px;
   cursor: pointer;
@@ -71,7 +76,7 @@ html, body {
 
 /* Main content area styles */
 .main-content {
-  flex-grow: 1; /* Allow main content to fill the remaining space (80%) */
+  flex-grow: 1; 
   width: 80%; /* Set width of the main content to 80% */
   padding-top: 0px;
   padding-left: 10px;
@@ -182,4 +187,14 @@ html, body {
   .main-content {
     width: 100%; /* Main content also takes up full width */
   }
+}
+
+.toggle-button {
+  margin: 10px 28%;
+  background: linear-gradient(195deg, rgb(73, 163, 241), rgb(26, 115, 232));
+  padding: 5px;
+  border-radius: 5px;
+  min-width: 5rem;
+  border: none;
+  text-align: center;
 }
